# Note-Taking-App

./: README.md  package-lock.json  package.json  svelte.config.js
.github/workflows/: build.yml  main.yml
design_handoff_marginalia/: 01_layered_system.md  02_design_system.md  03_screens.md  04_keyboard.md  05_tauri_stack.md  README.md  tokens.css  tokens.json
design_handoff_marginalia/references/: Marginalia.html  marginalia-layers.jsx  marginalia-overlays.jsx  marginalia-settings.jsx  marginalia-shell.jsx  marginalia-system.jsx  marginalia.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: editor.rs  filesystem.rs  search.rs  workspace.rs
src-tauri/src/events/: filesystem.rs  workspace.rs
src-tauri/src/models/: editor.rs  filesystem.rs  workspace.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: errors.rs  logging.rs
src/lib/: Tiptap.svelte
src/lib/components/: FileTree.svelte  VirtualFileTree.svelte  editor.svelte  livePreview.ts
src/lib/components/layout/: AppLayout.svelte  ResizablePanels.svelte
src/lib/core/filesystem/: api.ts  ignore.ts  (+3 more)
src/lib/hooks/: useHotkeys.ts
src/lib/stores/: app.ts  settings.ts  theme.ts  workspace.ts
src/lib/tauri/: commands.ts  events.ts  filesystem.ts  window.ts
src/lib/types/: editor.ts  filesystem.ts  global.ts  search.ts  workspace.ts
src/lib/utils/: logger.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/settings/: +page.svelte
src/routes/workspace/: +page.svelte  workspace.svelte
(+34 files in other folders)
